# flowsense

./: .gitignore  DEVLOG.md  README.md  RELEASE.md  package-lock.json  package.json
.codex-flow/: memory.md
apps/backend/: .env.example  package.json  pyproject.toml
apps/backend/app/: main.py
apps/backend/app/algorithms/: detector.py  normalizer.py
apps/backend/app/api/: router.py
apps/backend/app/api/routes/: activity.py  ai.py  analytics.py  automation.py  detect.py  extension.py  flow.py  search.py  settings.py  suggestion.py  voice.py  workflow.py
apps/backend/app/core/: config.py  database.py  init_db.py  time.py
apps/backend/app/models/: __init__.py  activity.py  daily_stats.py  flow_session.py  settings.py  suggestion.py  workflow.py
apps/backend/app/services/: activity_service.py  ai_service.py  analytics_service.py  automation_service.py  flow_session_service.py  search_service.py  settings_service.py  suggestion_service.py  voice_service.py  workflow_service.py
apps/backend/tests/: conftest.py  test_activity_api.py  test_algorithms.py  test_analytics_time.py  test_settings_api.py
apps/desktop/: .gitignore  electron-builder.yml  electron-entry.ts  electron-main-entry.ts  electron.vite.config.ts  eslint.config.js  index.html  overlay.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/electron/: activity-monitor.ts  backend-runner.ts  global-shortcut.ts  ipc-channels.ts  ipc-handlers.ts  main.ts  notification-manager.ts  overlay-window.ts  preload.ts  shortcuts.ts  tray-manager.ts
apps/desktop/public/: overlay.html
apps/desktop/src/: App.tsx  electron-env.d.ts  jsx.d.ts  main.tsx  store.tsx
apps/extension/: package.json  tsconfig.json
apps/extension/scripts/: build.mjs
apps/extension/src/: background.ts  manifest.json  popup.css  popup.html  popup.ts
claude/: ALGORITHMS.md  API.md  ARCHITECTURE.md  CODING_STANDARDS.md  COMPONENTS.md  DATABASE.md  FEATURES.md  IPC.md  PROJECT.md  PROMPTS.md  README.md  TASKS.md  UI.md  WIREFRAMES.md
scripts/: seed.py  setup-python.ps1  sign.ps1  sync-version.js
(+58 files in other folders)
