[project]
name = "flowsense-backend"
version = "2.0.7"
description = "FlowSense FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "aiofiles>=24.1.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.32.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
automation = [
    "pynput>=1.7.7",
    "pywinauto>=0.6.8; sys_platform == 'win32'",
    "pyobjc-framework-ApplicationServices>=10.3; sys_platform == 'darwin'",
    "pyatspi>=2.46; sys_platform == 'linux'",
    "Pillow>=10.4.0",
    "pytesseract>=0.3.13",
    "playwright>=1.52.0",
]
voice = [
    "kittentts @ https://github.com/KittenML/KittenTTS/releases/download/0.8.1/kittentts-0.8.1-py3-none-any.whl",
]

[tool.setuptools.packages.find]
include = ["app*"]
namespaces = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["B008", "B904", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
